Rename azure-nvme-utils -> azure-vm-utils and uprev to 0.4.0.
The upstream repository was renamed.  Match the rename and update
to the latest tag.

Signed-off-by: Chris Patterson <cpatterson@microsoft.com>

--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -874,9 +874,9 @@
       "component": {
         "type": "other",
         "other": {
-          "name": "azure-nvme-utils",
-          "version": "0.1.1",
-          "downloadUrl": "https://github.com/Azure/azure-nvme-utils/archive/refs/tags/v0.1.1.tar.gz"
+          "name": "azure-storage-cpp",
+          "version": "7.5.0",
+          "downloadUrl": "https://github.com/Azure/azure-storage-cpp/archive/v7.5.0.tar.gz"
         }
       }
     },
@@ -884,9 +884,9 @@
       "component": {
         "type": "other",
         "other": {
-          "name": "azure-storage-cpp",
-          "version": "7.5.0",
-          "downloadUrl": "https://github.com/Azure/azure-storage-cpp/archive/v7.5.0.tar.gz"
+          "name": "azure-vm-utils",
+          "version": "0.4.0",
+          "downloadUrl": "https://github.com/Azure/azure-vm-utils/archive/refs/tags/v0.4.0.tar.gz"
         }
       }
     },
